updates mid September

--- a/Statements/Xambo.ResearchStatement.tex
+++ b/Statements/Xambo.ResearchStatement.tex
@@ -90,7 +90,7 @@ Anna Xambó, PhD\\
 My research contributes to the fields of \textbf{HCI} and \textbf{sound} \& \textbf{music computing} and has \textbf{three foci}:
 
 \begin{enumerate}
-\item \textbf{Technology}: using cutting-edge technology in real-time interactive musical systems and creative algorithms borrowed from music information retrieval and machine learning that can be useful for real-time performance and musical improvisation e.g. live coding or algorithmic music.
+\item \textbf{Technology}: using cutting-edge technology in real-time interactive musical systems and creative algorithms borrowed from music information retrieval and machine learning that can be useful for real-time performance and musical improvisation e.g. live coding or generative music.
 \item \textbf{Design}: exploring novel aesthetics for real-time interactive musical systems e.g. tangible interfaces or wearable computing. 
 \item \textbf{Experience}: bringing more egalitarian, collaborative and participatory experiences to the fore e.g. multichannel experiences, participatory performances, DIY workshops. 
 \end{enumerate}
