--- a/Statements/Xambo.TeachingStatement.tex
+++ b/Statements/Xambo.TeachingStatement.tex
@@ -95,7 +95,7 @@ My teaching style has been practice and project studio based. This approach alig
 
 My teaching style is interdisciplinary. For example, I co-designed a course for undergraduates, \emph{Crossmedia}. This course promoted work by mixing sound, image, animation, video, and motion graphics. In 2004, we were awarded with a research grant to adapt these contents to preschoolers and grade-schoolers.
 
-I try to continuously reflect on my own teaching style because there are always areas of improvement. For example, in May 2017 I have passed successfully the course ``Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars'' led by Katherine Samford at Georgia Tech. In this course, I have strengthened my oral communication and teaching skills in English, given that I am a Catalan/Spanish native speaker. 
+I try to continuously reflect on my own teaching style because there are always areas of improvement. For example, in May 2017 I have passed successfully the course ``Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars'' led by Katherine Samford at Georgia Tech. In this course, I have strengthened my oral communication and teaching skills in English, given that I am a Catalan/Spanish native speaker. Also, I am currently pursuing the Learning and Teaching in Higher Education course at Queen Mary University of London (QMUL).
 
 Another area of improvement is moving my teaching style closer to the Coursera model of including more theory in the class and let students explore the practical aspects by their own based on a selected list of exercises and resources. However, group discussion in the class is important to solidify content knowledge. During the lectures, it is essential to make sure that the students are understanding the content with open questions, dialogues and quizzes. My teaching style is in alignment with ideas from (1) Dewey's \emph{experiential learning} pedagogy about learning through experiences, and (2) Papert's constructionism learning about \emph{learning by making}, and \emph{learning to learn}.
 
@@ -107,9 +107,10 @@ Typically, I provide the teaching material in digital format, so that students c
 
 \section*{Mentoring and Guest Lectures}
 
-As a Postdoctoral Fellow in Georgia Tech, I have been co-mentoring graduate students and giving guest talks. My approach is close to communities of practice: conversations influence the evolvement of the students' projects and senior students help younger students. It is rewarding to see the results in their projects.
+At Georgia Tech I have been co-mentoring graduate students and giving guest talks. Similarly, I have been co-advising at QMUL. My approach is close to communities of practice: conversations influence the evolvement of the students' projects and senior students help younger students. It is rewarding to see the results in their projects.
 
 During the academic year 2015--2016, I co-advised Marc Huet and Travis Gasque (master's students in digital media, School of Literature, Media, and Communication (LMC)) and Anna Weisling (PhD student in digital media, LMC) for their graduate design project TuneTable (see our TEI '17 publication for further details). This work has been part of Prof. Brian Magerko’s Digital Media studio course at Georgia Tech, which has informed a successful and competitive National Science Foundation (NSF) funded grant Advancing Informal STEM Learning. During Spring 2016, I also co-advised Scott Wise (graduate student in Computer Science, School of Computer Science) for a project of automatic algorithmic composition. From September 2015 to May 2017, I have been co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Prof. Jason Freeman. From this work we have published at the International Conference of Live Interfaces 2016 and Audio Mostly 2017 (see Peer-Reviewed Conference Papers). We are also preparing a journal article.
+In 2018, I have co-advised Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) for her master project on automated generation of soundscapes using content from Audio Commons.
 
 \section*{My Teaching Areas of Interest}
 
@@ -117,7 +118,7 @@ My teaching areas of interest include: human-computer interaction; interaction d
 
 \section*{Teaching Music Technology Related Courses}
 
-Teaching music technology related courses should be based on the experience of own music practice. However, it can be a biased situation. The concepts on music technology can be (and should be) illustrated with the combination of own examples and others' complementary examples. In order to overcome a biased situation, the principles need to be taught separated from  personal taste and a particular aesthetic. The evaluation criteria needs to be clear for both students and professor, so that musical aesthetics should not interfere in grading. Promoting \emph{critical listening} in the discussion is an essential skill for students of music technology related subjects. 
+Teaching music technology related courses can be based on the experience of own music practice. This approach shows to the students that you have your own voice. However, it can be a biased situation. The concepts on music technology can be (and should be) illustrated with the combination of own examples and others' complementary examples. In order to overcome a biased situation, the principles need to be taught separated from  personal taste and a particular aesthetic. The evaluation criteria needs to be clear for both students and professor, so that musical aesthetics should not interfere in grading. Promoting \emph{critical listening} in the discussion is an essential skill for students of music technology related subjects. 
 
 %\vspace{1cm}
 \vfill{}
