--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -180,8 +180,10 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Honors \& Awards}
 \noindent
 
-\subsection*{Research Honors \& Awards}
+\subsection*{Research Grants, Honors \& Awards}
+\years{2018--2021} \textsc{Startup grant (Startpakke)} (250,000 NOK), awarded to raise the number of women in male dominated areas. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
+\years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
 
@@ -297,6 +299,10 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
+
+\years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
+\years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
+\years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18). Wrexham, United Kingdom. \\
 \years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 174--177.\\ 
 \years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 364--369.\\ 
 \years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA, pp. 344--345.\\ 
@@ -346,23 +352,25 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
+\years{2018e} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
+\years{2018d} \textsc{Oral Presenter} together with Pauwels, J. (September 14, 2018). "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". \emph{AM '18}. \emph{University of Wrexham}, Wrexham, UK.\\
 \years{2018c} \textsc{Oral Presenter}. (July 12, 2018). “Audio Commons: Challenges and Opportunities of Using Online Repositories in Music Production and Performance". \emph{Filmuniversität Babelsberg Konrad Wolf}. Potsdam, Germany.\\
-\years{2018b} \textsc{Oral Presenter}. (June 6, 2018). “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". \emph{NIME '18}. Blacksburg, Virginia, USA.\\
-\years{2018a} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Belfast, Northern Ireland.\\
+\years{2018b} \textsc{Oral Presenter}. (June 6, 2018). “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". \emph{NIME '18}. Virginia Tech, Blacksburg, Virginia, USA.\\
+\years{2018a} \textsc{Oral Presenter}. (April 21, 2018). “Live Repurposing of Crowdsourced Sounds: Challenges and Opportunities of Using Online Repositories in Music Performance". \emph{Sonorities Symposium, Sonorities Festival}. Queen's University Belfast, Belfast, Northern Ireland.\\
 \years{2017} \textsc{Oral Presenter}. (August 24, 2017). “Turn-taking and Chatting in Collaborative Music Live Coding". \emph{AM '17}. London.\\
-\years{2016b} \textsc{Oral Presenter}. (July 2, 2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. Brighton, UK.\\
+\years{2016b} \textsc{Oral Presenter}. (July 2, 2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". \emph{ICLI 2016}. University of Sussex, Brighton, UK.\\
 \years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). “Anna Xambó and Liz Dobson in Conversation". \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
 \years{2015} \textsc{Lightning Talk Speaker}. (August 14, 2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". \emph{RESPECT 2015}. Charlotte, NC. USA.\\
-\years{2014b} \textsc{Oral Presenter}. (July 1, 2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". \emph{NIME '14}. London.\\
+\years{2014b} \textsc{Oral Presenter}. (July 1, 2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". \emph{NIME '14}. Goldsmiths University, London.\\
 \years{2014a} \textsc{Oral Presenter}. (April 30, 2014). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{CHI '14}. Toronto, ON, Canada.\\
 \years{2013} \textsc{Oral Presenter}. (November 11, 2013). “Tabletop Tangible Interfaces for Music Performance and Implications for Tabletop Research". \emph{School of Computing}, University of Kent. Kent, UK.\\
-\years{2011b} \textsc{Oral Presenter}. (August 2, 2011). “Multi-touch Interaction Principles for Collaborative Real-time Music Activities: Towards a Pattern Language". \emph{ICMC '11}. Huddersfield, UK.\\
+\years{2011b} \textsc{Oral Presenter}. (August 2, 2011). “Multi-touch Interaction Principles for Collaborative Real-time Music Activities: Towards a Pattern Language". \emph{ICMC '11}. University of Huddersfield. Huddersfield, UK.\\
 \years{2011a} \textsc{Oral Presenter}. (July 4, 2011). “Collaborative Music Interaction on Tabletops: An HCI Approach". \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
-\years{2010} \textsc{Oral Presenter}. (July 23, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{SMC '10}. Barcelona.\\
+\years{2010} \textsc{Oral Presenter}. (July 23, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{SMC '10}. Universitat Pompeu Fabra, Barcelona.\\
 \years{2008c} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (October 31, 2008). “Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido" (Freesound, Sons de Barcelona \& Freesound Radio: Collaborative Projects around sound). \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
 \years{2008b} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (2008). “Freesound.org, Freesound Radio i Sons de Barcelona" (Freesound.org, Freesound Radio \& Sons de Barcelona"). \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
 \years{2008a} \textsc{Panel Member} together with Alsina, A., de Jong, B., Loscos, A. and Roma, G. (September 27, 2008). “Influencia de la tecnología en la evolución de la música y la industria" (Influence of the technology in the evolution of music and industry). \emph{NetAudio}, CCCB. Barcelona. \href{https://www.youtube.com/watch?v=6JlCCvYXrHY}{[video]}\\
-\years{2007}\textsc{Oral Presenter} together with Roma, G. (September 20, 2007). “A Sound Editor with a Tangible Interface". \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
+\years{2007}\textsc{Oral Presenter} together with Roma, G. (September 20, 2007). “A Sound Editor with a Tangible Interface". \emph{SCSymposium(2007)}, DCM, The Hague, The Netherlands.
 
 \subsection*{Own Institution}
 \noindent
@@ -370,21 +378,21 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2018b} \textsc{Oral Presenter}. (August 13, 2018). “Women in Music Tech: A Case Study". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2018a} \textsc{Oral Presenter}. (August 13, 2018). “A Journey Through My Research and Creative Practice". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2017b} \textsc{Oral Presenter}. (June 19, 2017). “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". \emph{CCW2017: Co-Creation Workshop, ICC 2017}. Atlanta, GA, USA.\\
-\years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). “Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
-\years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). “Tangible User Interfaces and Tabletops". \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
-\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). “Women in Sound." Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
-\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). “Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
-\years{2016a} \textsc{Oral Presenter}. (January 26, 2016). “EarSketch: Computational Music Remixing for All". Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
+\years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). “Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech, Atlanta, GA, USA.\\
+\years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). “Tangible User Interfaces and Tabletops". \emph{First Annual Women and Music Tech Concert and Reception}, The Garage, Atlanta, GA. USA.\\
+\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). “Women in Sound." Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech, Atlanta, GA, USA.\\
+\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). “Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT, Atlanta, GA, USA.\\
+\years{2016a} \textsc{Oral Presenter}. (January 26, 2016). “EarSketch: Computational Music Remixing for All". Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech, Atlanta, GA, USA.\\
 \years{2015c} \textsc{Oral Presenter}. (September 3, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2015b} \textsc{Oral Presenter}. (August 27, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
-\years{2015a} \textsc{Oral Presenter}. (August 24, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2014} \textsc{Oral Presenter}. (April 9, 2014). “Let's Jam the Reactable: Peer Learning During Musical Improvisation with a Tabletop Tangible Interface". \emph{London Knowledge Lab}. London.\\
-\years{2013} \textsc{Oral Presenter}. (June 2, 2013). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
-\years{2012} \textsc{Oral Presenter}. (June 12, 2012). “Collaboration on Interactive Tabletops for Music Performance: An Exploratory Study". \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
-\years{2011b} \textsc{Oral Presenter}. (June 16, 2011). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011a} \textsc{Oral Presenter}. (May 17, 2011). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
-\years{2010b} \textsc{Oral Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
-\years{2010a} \textsc{Oral Presenter}. (May, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.
+\years{2015b} \textsc{Oral Presenter}. (August 27, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech, Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
+\years{2015a} \textsc{Oral Presenter}. (August 24, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{GTCMT Seminar Series}, Georgia Tech, Atlanta, GA, USA.\\ 
+\years{2014} \textsc{Oral Presenter}. (April 9, 2014). “Let's Jam the Reactable: Peer Learning During Musical Improvisation with a Tabletop Tangible Interface". \emph{London Knowledge Lab}, London.\\
+\years{2013} \textsc{Oral Presenter}. (June 2, 2013). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2013}, OU, Milton Keynes, UK.\\
+\years{2012} \textsc{Oral Presenter}. (June 12, 2012). “Collaboration on Interactive Tabletops for Music Performance: An Exploratory Study". \emph{CRC PhD Student Conference 2012}, OU, Milton Keynes, UK.\\
+\years{2011b} \textsc{Oral Presenter}. (June 16, 2011). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{CRC PhD Student Conference 2011}, OU, Milton Keynes, UK.\\
+\years{2011a} \textsc{Oral Presenter}. (May 17, 2011). “Tabletop Groupware for Music Performance: Design and Evaluation". \emph{2011 Doctoral Workshops Conference}, OU, Milton Keynes, UK.\\
+\years{2010b} \textsc{Oral Presenter}. (June 8, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{CRC PhD Student Conference 2010}, OU, Milton Keynes, UK.\\
+\years{2010a} \textsc{Oral Presenter}. (May, 2010). “Issues and Techniques for Collaborative Music Making on Multi-touch Surfaces". \emph{Music Research Day}, Music Research Studio, OU, Milton Keynes, UK.
 
 \section*{Poster Presentations, Demos \& Workshops}
 \noindent
@@ -453,7 +461,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Broadcasting}
 \noindent
 
-\years{2018a}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2018b}Anna Xambó's “H2RI.01-04". (June 21, 2018). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
 \years{2018a}Anna Xambó's “H2RI.07". (May 17, 2018). No Pigeonholes EXP on KOWS-FM.\\
 \years{2013f}peterMann's “og02". (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
 \years{2013e}peterMann's “og01", og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
@@ -470,13 +478,15 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Solo Performances}
 \noindent
 
-\years{2018}Xambó, A. (August 9, 2018). Live. \textsc{MareNostrum}. Cube Fest. Moss Arts Center. Blacksburg, VA, USA.\\
-\years{2017}peterMann. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
-\years{2016b}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
-\years{2016a}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
-\years{2013}Xambó, A. (October 4, 2013). Live coding session. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona, Spain.\\
-\years{2012}peterMann. (September 20, 2012). Live. \emph{Crispy Crunchy Creaky}. Niu. Barcelona, Spain.\\
-\years{2006}peterMann. (June 10, 2006). Live. \emph{5a Mostra Sonora i Visual | Convent Sant Agustí}. Barcelona, Spain.
+
+\years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. \textsc{Imaginary Berlin}. WAC '18. Factory Berlin. Berlin, Germany.\\  
+\years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. \textsc{MareNostrum}. Cube Fest. Moss Arts Center. Blacksburg, VA, USA.\\
+\years{2017}\textbf{peterMann}. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
+\years{2016b}\textbf{Xambó, A.} (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
+\years{2016a}\textbf{peterMann}. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
+\years{2013}\textbf{Xambó, A.} (October 4, 2013). Live coding session. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona, Spain.\\
+\years{2012}\textbf{peterMann.} (September 20, 2012). Live. \emph{Crispy Crunchy Creaky}. Niu. Barcelona, Spain.\\
+\years{2006}\textbf{peterMann.} (June 10, 2006). Live. \emph{5a Mostra Sonora i Visual | Convent Sant Agustí}. Barcelona, Spain.
 
 \subsection*{Collaborative Performances}
 \noindent
@@ -517,9 +527,10 @@ Collaborator: Gerard Roma.
 
 \subsection*{Code}
 \noindent
-\years{2018}Embedded AudioCommons: \href{https://github.com/AudioCommons/embedded-audiocommons}{github.com/AudioCommons/embedded-audiocommons}.\\
+
+\years{2018b}Embedded AudioCommons: \href{https://github.com/AudioCommons/embedded-audiocommons}{github.com/AudioCommons/embedded-audiocommons}.\\
 Role: Concept and implementation.\\
-\years{2018}HCI Python Utils: \href{https://github.com/axambo/hci-python-utils}{github.com/axambo/hci-python-utils}.\\
+\years{2018a}HCI Python Utils: \href{https://github.com/axambo/hci-python-utils}{github.com/axambo/hci-python-utils}.\\
 Role: Concept and implementation.\\
 \years{2017--present} WACastMix: \href{http://annaxambo.me/code/WACastMix}{annaxambo.me/code/WACastMix}.\\
 Role: Concept and implementation.\\
@@ -635,7 +646,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \section*{Mentoring}
 \noindent
 
-\years{01/2018--04/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons.\\
+\years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons.\\
 \years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
@@ -657,11 +668,12 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
-\years{05/2017--present}\href{https://www.audiocommons.org/}{Audio Commons}, the blog of the EU-funded project Audio Commons. Editor-in-Chief, Reviewer and Co-Author.\\ 
-\years{10/2016--present}\href{http://annaxambo.me/blog/}{Anna Xambó's Blog}, the blog of my personal website. Author.\\ 
-\years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Co-Editor, Reviewer and Co-Author.\\ 
-\years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
-\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Co-Author.\\
+\years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Coordinator, Reviewer and Author.\\ 
+\years{05/2017--present}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Editor-in-Chief, Reviewer and Author.\\ 
+\years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Author.\\ 
+\years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Editor, Reviewer and Author.\\ 
+\years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Author. \\ 
+\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author. 
 
 \subsection*{Artistic Collective Projects}
@@ -683,47 +695,50 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2019}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
-\years{2017}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
-\years{2017}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
-\years{2017}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech Committee}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016}\textsc{Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2011}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
-\years{2011}\textsc{Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
+\years{2017c}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
+\years{2017b}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
+\years{2017a}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016b}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech Committee}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016a}\textsc{Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2011b}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{Internatio nal Computer Music Conference}. Huddersfield, UK.\\
+\years{2011a}\textsc{Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
 \subsection*{Conference Reviewer}
 \noindent
 
-\years{2018}\emph{ACM special interest group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
-\years{2018}\emph{International Conference of the Learning Sciences} (2018)\\
-\years{2018}\emph{International Society for Music Information Retrieval Conference} (2018)\\
-\years{2017}\emph{ACM Creativity and Cognition} (2017).\\
-\years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
-\years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
-\years{2017}\emph{International Computer Music Conference -- ICMC Music} (2017--2018).\\
-\years{2016}\emph{International Conference on Live Interfaces} (2016).\\
-\years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016}\emph{Web Audio Conference} (2016--2018).\\
-\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2017).\\
-\years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
-\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
-\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2018).\\
-\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011--2018).
+\years{2018h}\emph{ACM special interest group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
+\years{2018g}\emph{International Conference of the Learning Sciences} (2018).\\
+\years{2018f}\emph{International Society for Music Information Retrieval Conference} (2018).\\
+\years{2017h}\emph{ACM Creativity and Cognition} (2017).\\
+\years{2017g}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
+\years{2017f}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
+\years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017e, 2018e).\\
+\years{2016g}\emph{International Conference on Live Interfaces} (2016).\\
+\years{2016f}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
+\years{2016--2018}\emph{Web Audio Conference} (2016e, 2017d, 2018d).\\
+\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015c, 2016d, 2017c).\\
+\years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
+\years{2012--2018}\emph{ACM Designing Interactive Systems} (2012c, 2016c, 2018c).\\
+\years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012b, 2013b, 2014b, 2015b, 2016b, 2017b, 2018b).\\
+\years{2011--2018}\emph{New Interfaces for Musical Expression} (2011, 2012a, 2013a, 2014a, 2015a, 2016a, 2017a, 2018a).
 
 \subsection*{Journal Reviewer}
 \noindent
 
-\years{2018}\emph{British Journal of Educational Technology}. Wiley.\\
-\years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
-\years{2016}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
+\years{2018b}\emph{Journal of New Music Research}. ScholarOne Manuscripts.\\
+\years{2018a}\emph{Transactions on Computing Education}. ACM.\\
 \years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society.\\
-\years{2016}\emph{Qualitative Research}. Sage Publications.\\
-\years{2018}\emph{Transactions on Computing Education}. ACM.
+\years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2016a}\emph{Qualitative Research}. Sage Publications.\\
+\years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.
 
 \subsection*{Panelist}
 \noindent
 
+%\years{2018c}(November 15, 2018). Resonate Music Conference 2018. Glasgow, Scotland.\\
 \years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 \years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
 
