--- a/Statements/Xambo.DiversityStatement.tex
+++ b/Statements/Xambo.DiversityStatement.tex
@@ -87,21 +87,25 @@ Anna Xambó, PhD\\
 
 \section*{Why Diversity Matters}
 
-A diverse environment is important for understanding and respecting other points of view and facilitating rich collaborations. In the anthropology field it is said: \emph{understanding "the other" helps to understand oneself}. In the field of music technology, as it also happens in other STEM fields, there is a well-known problem of lack of diversity. As a woman in music technology, I am particularly concerned about the lack of women in my field, and thus the lack of role models. In particular, my actions are committed to diversity and equity in higher education.
+A diverse environment is important for understanding and respecting other points of view and facilitating rich collaborations. In the anthropology field it is said: \emph{understanding "the other" helps to understand oneself}. In the field of music technology, as it also happens in other STEM fields, there is a well-known problem of lack of diversity. As a woman in music technology, I am particularly concerned about the lack of women in my field, and thus the lack of role models. Overall, my actions are committed to diversity and equity in higher education and the music technology industry.
 
 \section*{We Are Agents of Change}
 
-We can be agents of change. As part of the \href{http://webaudio.gatech.edu/}{WAC 2016} committee, we included a travel grant program that looked into increasing diversity in the WAC conference hosted at Georgia Tech, and made sure that there was gender parity in \href{http://webaudio.gatech.edu/keynotes}{keynote speakers}. Even though all our efforts, the number of female attendees was low. What was the problem?\\
+We can be agents of change. As part of the \href{http://webaudio.gatech.edu/}{WAC 2016} committee, we included a travel grant program that looked into increasing diversity in the WAC conference hosted at Georgia Tech, and made sure that there was gender parity in the \href{http://webaudio.gatech.edu/keynotes}{keynote speakers}. Even though all our efforts, the number of female attendees was low. What was the problem?\\
 
-I took it as a personal research and conducted a series of informal interviews with women in the field of music technology at different stages of their life: an undergrad student, two grad students, an early career lecturer, a high school teacher, and a music technology's program coordinator. In April 2016, I was invited as a \href{http://wiswos.bitbucket.org/index.html\%3Fp=435.html}{keynote speaker in conversation with Liz Dobson} at \emph{Women in Sound Women on Sound on Educating Girls into Sound}, held in Lancaster, UK. We discussed the findings. We continued the discussion at the Georgia Tech Center for Music Technology (GTCMT) department. Then, we decided to create \href{http://www.gtcmt.gatech.edu/}{Women in Music Tech} to make sure that we sustainably bring more women into the program.
+I took it as a personal research and conducted a series of informal interviews with women in the field of music technology at different stages of their life: an undergrad student, two grad students, an early career lecturer, a high school teacher, and a music technology's program coordinator. In April 2016, I was invited as a \href{http://wiswos.bitbucket.org/index.html\%3Fp=435.html}{keynote speaker in conversation with Liz Dobson} at the event \emph{Women in Sound Women on Sound on Educating Girls into Sound}, held in Lancaster, UK. We discussed the findings and continued the discussion at the Georgia Tech Center for Music Technology (GTCMT) department. Then, we decided to create \href{http://www.gtcmt.gatech.edu/}{Women in Music Tech} to sustainably bring more women into the program, an organization of which I was co-chair from 2017 to 2018.
 
-\section*{Women in Music Tech}
+\section*{Women in Music Tech (2017-2018)}
 
-\href{http://www.gtcmt.gatech.edu/womeninmusictech}{Women in Music Tech} is an exciting adventure. This organization has been possible with the collaboration of everyone from the GTCMT department: students, staff, and faculty members. We are also in conversations with a number of organizations and individuals from Georgia Tech that are collaborating, supporting, and helping us to define our agenda. We have programmed outreach events, launched a bi-monthly newsletter, and are making sure that there is a safe and respectful space for everybody. Our next milestone is to create a sustainable organization during 2017--2018. With only one year of actions, the graduate level of applications has improved but is still not ideal (female participation 21.1\% (2015--16), 16.3\% (2016--17), 25.4\% (2017--18)).
+\href{http://www.gtcmt.gatech.edu/womeninmusictech}{Women in Music Tech} has been an exciting adventure. This organization has been possible with the collaboration of everyone from the GTCMT department: students, staff, and faculty members. We were also in conversations with a number of organizations and individuals from Georgia Tech that are collaborating, supporting, and helping us to define our agenda. During the first year, we programmed outreach events, launched a bi-monthly newsletter, and are making sure that there is a safe and respectful space for everybody. With only one year of actions, the graduate level of applications has improved but is still not ideal (female participation 21.1\% (2015--16), 16.3\% (2016--17), 25.4\% (2017--18)). Our next milestone was to create a sustainable organization. 
+
+\section*{WiNIME (2018)}
+
+As a follow up of WiMT, I looked into the underrepresentation of women at the New Interfaces for Musical Expression (NIME) conference in the paper  \href{http://annaxambo.me/pub/Xambo_2018_WiNIME.pdf}{Who Are the Women Authors in NIME? - Improving Gender Balance in NIME Research} (Xambó 2018), and created the [WiNIME directory](https://axambo.github.io/directory-of-winime/).
 
 \section*{What Else Can We Do?}
 
-As agents of change, we can improve our environment establishing constant dialogue with the department about the organization's actions and achievements. Furthermore, attending events related to diversity, such as the \href{http://www.diversity.gatech.edu/diversitysymposium}{Diversity Symposium 2016} at Georgia Tech, is important to network, join forces and share current issues and future strategies. 
+As agents of change, we can improve our environment establishing constant dialogue with our co-workers in the department about our actions and achievements related to improving the representation of women in music technology. Furthermore, attending events related to diversity, such as the \href{http://www.diversity.gatech.edu/diversitysymposium}{Diversity Symposium 2016} at Georgia Tech, is important to network, join forces and share current issues and future strategies. 
 
 %\vspace{1cm}
 \vfill{}
